# pytools4dart

./: .gitattributes  .gitlab-ci.yml  .zenodo.json  MANIFEST.in  NEWS.md  README.md  dart_install_win.py  environment.yml  pyproject.toml  pyproject_doc.toml  requirements.txt  setup.py  test.ps1
doc/: 01_simulation.md  02_core.md  03_optical_properties.md  04_plots.md  05_object_3d.md  06_database.md  06_tools.md  10_core_cross_dependcies.md  11_DART_bugs.md  core.ipynb  database.ipynb  object_3d.ipynb  optical_properties.ipynb  plots.ipynb  simulation.ipynb
doc/user_guides/: 05_object_3d.md  10_core_cross_dependencies.md
docs/: datatable.js  style.css
docs/user_guides/: 00_Installation.md  02_core.md  (+9 more)
examples/: README.md  use_case_0.py  use_case_1.py  use_case_2.py  use_case_3.py  use_case_4.py
figures/: plots_added.xml  pytools4dart_flowchart.xml  sim_base_atmosphere.xml  sim_base_coeff_diff.xml  sim_base_directions.xml  sim_base_lidar_phase.xml  sim_base_maket.xml  sim_base_obj_3d.xml  sim_base_phase.xml  trees.xml
gitlab-ci/: activate-env.ps1  activtate-env.ps1  conda-build.ps1  dart-build.ps1  dart_parameters_table.py  ptdvenv-build.ps1  win-build.ps1
pytools4dart/: __init__.py  _version.py  acquisition.py  add.py  checker.py  core.py  dart.py  diff.py  hdrtodict.py  makefiles.py  run.py  scene.py  sensor.py  sequence.xml  sequence.xsd  sequencer.py  settings.py  simulation (copy).py  simulation.py  simulationWhispers.py  simulationXSD.py  source.py  update.py  userfriendlstuff.py  voxreader.py  warnings.py
templates/: menu-bootstrap.js  plots.xml  style-bootstrap.css  urban.xml
tests/: test_newSimuWithTreesTxt.py  test_plotsFullTable_fromXSDAndTXTPlots.py  test_simuxsd_add100SpBands.py  test_simuxsd_addMultiPlots.py  test_simuxsd_addSpBands.py  test_xsd.py  test_xsd2.py
(+225 files in other folders)
